[tool.poetry]
name = "packing-predictor"
version = "0.1.0"
description = ""
authors = ["Ryan O'Sullivan <osullivryan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.2.0"
circlepacker = "^0.2.2"
ipykernel = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
